# ai-video-downloader

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/skills/douyin-crawler/: SKILL.md
.claude/skills/douyin-generator/: SKILL.md
.claude/skills/video-download/: SKILL.md
.claude/skills/voice-over/: SKILL.md
backend/: __init__.py  __main__.py  crawler.py  downloader.py  requirements.txt
backend/voices/: omnivoice.py  vbee.py
douyin/: cli.py  debug_html.py  pyproject.toml  store.py  transcribe.py
douyin/voices/: omnivoice.py  vbee.py
voice/: elevenlabs.csv  omnivoice.csv  openai.csv  vbee.csv
